packages/ui/src/components/duplicate-packages-warning/duplicate-packages-warning.module.css
.root a {
  text-decoration: none;
}

.root a:hover,
.root a:active,
.root a:focus {
  text-decoration: none;
}

.title {
  margin-bottom: var(--space-xxsmall);
  font-size: var(--size-medium);
}

.titleDelta {
  margin-left: var(--space-xxxsmall);
  padding: 1px 2px;
  vertical-align: super;
  font-size: 9px;
}

